[project]
name = "pythonclient"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shlule", email = "93739679+Shlule@users.noreply.github.com" }
]
dependencies = [
    "logzero>=1.7.0",
    "jsondiff==1.3.0",
    "dacite==1.6.0",
    "python-socketio[asyncio_client]==5.4.0",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
   
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pythonclient"]
